2003-08-21  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* utils.cc (octave_vsnprintf): Copy va_list to avoid using more
	than once.

2003-08-07  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* utils.cc (octave_vsnprintf): Call octave_raw_vsnprintf instead
	of calling vsnprintf directly.
	(octave_vsnprintf) [HAVE_C99_VSNPRINTF]: Declare nchars to be size_t.

2003-08-06  Heine Kolltveit  <kolltvei@idi.ntnu.no>

	* utils.cc (check_dimensions(Array<int>&, char),
	get_dimensions(octave_value&, char, Array<int>&): New functions.
	* utils.h (check_dimensions (Array<int>&, char), 
	get_dimensions (octave_value&, char, Array<int>&)): Provide decl.

	* data.cc (fill_matrix): Also create N-d arrays.
 	(Fones, Fzeros): Handle more than 2 args to create N-d arrays.

2003-07-30  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* data.cc (make_diag): Use std::abs instead of our own ABS macro.

	* utils.cc (identity_matrix): Move here from data.cc.
	(identity_matrix): Use std::min instead of our own MIN macro.

	* utils.h (identity_matrix): Provide decl.

	* DLD-FUNCTIONS/svd.cc (Fsvd): Improve handling of empty matrix arg.

	* ov.cc (octave_value(const ArrayN<Complex>&)): New constructor.
	* ov.h (octave_value(const ArrayN<Complex>&)): Provide decl.

2003-07-30  Heine Kolltveit <kolltvei@idi.ntnu.no>

	* ov.cc (octave_value(const ArrayN<double>&)): New constructor.
	* ov.h (octave_value(const ArrayN<double>&)): Provide decl.

2003-07-30  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* ov.h (Vpropagate_empty_matrices): Delete decl.
	* ov.cc: (Vpropagate_empty_matrices): Delete.
	(propagate_empty_matrices): Delete.
	(symbols_of_ov): Delete DEFVAR for propagate_empty_matrices.

	* utils.cc (empty_arg): Behave as though propagate_empty_matrices
	is always 1.
	* ov-range.cc (octave_range::is_true): Likewise.
	* ov-base-mat.cc (octave_base_matrix<MT>::is_true): Likewise.

	* octave.cc (maximum_braindamage): Also set
	warn_matlab_incompatible to TRUE.

	* lex.l (Vwhitespace_in_literal_matrix): Delete.